docker_kubernetes/app/config/gateway.yaml
# Based on: https://github.com/envoyproxy/gateway/releases/download/v0.6.0/quickstart.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-routes
spec:
  parentRefs:
    - name: eg
  rules:
    - backendRefs:
        - kind: Service
          namespace: default
          name: post-service-service
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /create-post
        - path:
            type: PathPrefix
            value: /delete-post
        - path:
            type: PathPrefix
            value: /delete-all-posts
        - path:
            type: PathPrefix
            value: /update-post
        - path:
            type: PathPrefix
            value: /create-reaction
        - path:
            type: PathPrefix
            value: /delete-reaction
    - backendRefs:
        - kind: Service
          namespace: default
          name: journey-service-service
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /create-journey
        - path:
            type: PathPrefix
            value: /view-journey
        - path:
            type: PathPrefix
            value: /view-journeys-user
        - path:
            type: PathPrefix
            value: /delete-journey
        - path:
            type: PathPrefix
            value: /delete-journeys-user
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: auth-policy
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: auth-routes
  jwt:
    providers:
    - name: auth0-jwt
      remoteJWKS:         
        uri: "https://auth-domain.com/.well-known/jwks.json"
  cors:
    allowOrigins:
    - "http://localhost:3000"
    allowMethods:
    - GET
    - POST 
    - DELETE 
    allowHeaders:
    - "*"
    exposeHeaders:
    - "*"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-routes
spec:
  parentRefs:
    - name: eg
  rules:
    - backendRefs:
        - kind: Service
          namespace: default
          name: post-service-service
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /view-posts
        - path:
            type: PathPrefix
            value: /view-posts-user
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: open-policy
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: open-routes
  cors:
    allowOrigins:
    - "http://localhost:3000"
    allowMethods:
    - GET
    allowHeaders:
    - "*"
    exposeHeaders:
    - "*"
---
